fix: rename blog to posts and enforce vertical scrollbar

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+html {
+  overflow-y: scroll;
+}
+
 @plugin "@tailwindcss/typography";
 
 @plugin "daisyui" {
